service-hello-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
  - name: http
    port: 80 # Service's port
    protocol: TCP
    targetPort: 50000
