service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - name: http
    port: 80 # Service's port
    protocol: TCP
    targetPort: 80
