ingress.yaml
# Note that GKE L7 ELBs do not support url rewriting. Had to use nginx.
#
# Installed nginx with the standard install steps:
# https://kubernetes.github.io/ingress-nginx/deploy/#gce-gke
#
# Note the warning which applied in my case.
# In order to use nginx on a private cluster, the control plane must be able to
# contact the nodes on port 8443.
#
# $ gcloud compute firewall-rules create gke-nginx-ingress \
#     --description "Allow GKE Control Plane to access nginx-ingress controller" \
#     --action allow \
#     --rules tcp:8443 \
#     --network <your network> \
#     --project <your project> \
#     --source-ranges <your master control plane range> \
#     --target-tags <your target tags>

# For more on nginx rewrite rules:
# https://github.com/kubernetes/ingress-nginx/blob/main/docs/examples/rewrite/README.md

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neg-demo-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /nginx(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80

  defaultBackend:
    service:
      name: hello-app-svc
      port:
        number: 80 # Should match the port used by the Service
